# benchmark

./: README.md
bm_fileio/: deploy.sh  dist.sh  run.sh  setup.ipynb
bm_fileio/py/bm_fileio/: .gitignore  setup.py
bm_fileio/py/bm_fileio/bm_fileio/: __main__.py
bm_fileio/py/bm_fileio/bm_fileio/utl/: timed.py
bm_fileio/rs/bm_fileio/: Cargo.toml
bm_fileio/rs/bm_fileio/examples/: file-lock.rs
bm_fileio/rs/bm_fileio/src/: main.rs
bm_fileio/rs/bm_fileio/src/utl/: time.rs
