[package]
name = "bm_fileio"
version = "0.1.0"
authors = ["chenyuzhi <chenyuzhi@hikvision.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# fs2 = "*"
clap = { version = "3.1.6", features = ["derive"] }
tokio = { version = "1", features = ["full"] }